feat: Implement core entity classes for Empresa, Gateway, Process, Rol, and Usuario
- Added Empresa entity with fields for id, nombre, nit, correoContacto, and a one-to-many relationship with Process.
- Introduced Gateway entity with fields for id, tipo, and a many-to-one relationship with Process.
- Enhanced Process entity to include fields for name, description, category, status, and relationships with Empresa, Activity, Edge, and Gateway.
- Created Rol entity with fields for id, nombre, descripcion, and a many-to-one relationship with Empresa.
- Developed Usuario entity with fields for id, correo, password, and relationships with Empresa and Rol.

feat: Add exception handling for company-related operations

- Created CompanyNotFoundException and DuplicateCompanyException for better error management.
- Implemented GlobalExceptionHandler to manage exceptions and return appropriate error responses.

feat: Establish repositories for data access

- Added repositories for Activity, Company, Edge, Empresa, Gateway, Process, Rol, and Usuario entities.
- Included custom query methods in repositories for specific data retrieval needs.

feat: Develop services for business logic

- Implemented services for Activity, Company, Edge, Empresa, Gateway, Process, Rol, and Usuario to handle business operations.
- Each service includes methods for creating, updating, retrieving, and deleting entities, along with necessary validations.

chore: Update ActivityService and EdgeService to utilize new entity relationships

- Refactored ActivityService to manage activities with associated processes and roles.
- Enhanced EdgeService to validate source and target entities before creating edges.

feat: Add DTOs for data transfer

- Created DTO classes for Empresa, Gateway, Process, Rol, and Usuario to facilitate data transfer between layers.